# 2023

./: .gitignore  LICENSE  Makefile  README.md  about.html  archives.html  authors.html  categories.html  index.html  job-board.html  pelicanconf.py  publishconf.py  pyproject.toml  schedule.html  speaking.html  tags.html  tasks.py
.github/workflows/: pelican.yml
about/: code-of-conduct.html  diversity-statement.html  faq.html  privacy-statement.html  volunteering.html
attend/: food.html  grants.html  health.html  parking.html  venue.html
author/: pytexas-devs.html
category/: about.html  attend.html  job-board.html  schedule.html  speaking.html  sponsors.html
content/about/: about.md  code-of-conduct.md  diversity-statement.md  faq.md  privacy-statement.md  volunteering.md
content/attend/: food.md  grants.md  health.md  parking.md  venue.md
content/job-board/: job-board.md
content/schedule/: keynote.md  lightning-talks.md  schedule.md  talks.md
content/speaking/: keynotes.md  speaking.md
content/sponsors/: current-sponsors.md  prospectus.md  sponsors.md  why-sponsor.md
data/: sessions.json  speakers.json
feeds/: about.atom.xml  all.atom.xml  attend.atom.xml  job-board.atom.xml  schedule.atom.xml  speaking.atom.xml  sponsors.atom.xml
input/schedule/: index.md
input/venue/: index.md
schedule/: keynotes.html  lightning-talks.html  talks.html
speaking/: keynotes.html  talks.html
sponsors/: current-sponsors.html  prospectus.html  sponsors.html  why-sponsor.html
templates/: base.html  index.html
utils/: ext_table_class.py  talk_builder.py
(+9 files in other folders)
