[tool.poetry]
name = "pytexas-conference-site"
version = "0.1.0"
description = ""
authors = ["Mason Egger <mason@pytexas.org>"]
packages = [
    { include = "utils" }
]

[tool.poetry.dependencies]
python = "^3.8"
pelican = "^4.8.0"
pelican-neighbors = "^1.2.0"
markdown = "^3.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
